[gd_scene load_steps=4 format=3 uid="uid://jo2t2lgegq1t"]

[ext_resource type="Script" uid="uid://ccxl2ua1d85qv" path="res://Scripts/ImpedanceChallenge.gd" id="1_n2vlf"]
[ext_resource type="AudioStream" uid="uid://drwjsqifogf8a" path="res://Sonidos/okay.wav" id="2_c2v5p"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_v1fx1"]
blend_mode = 1

[node name="ImpedanceChallenge" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n2vlf")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(0, 5.5101075, 0, 0.7137255)
material = SubResource("CanvasItemMaterial_v1fx1")
layout_mode = 0
offset_left = -640.0
offset_top = -358.0
offset_right = 640.0
offset_bottom = 362.0

[node name="Title" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 501.0
offset_top = 236.0
offset_right = 801.0
offset_bottom = 270.0
theme_override_font_sizes/font_size = 24
text = "Desafio impedancia"
horizontal_alignment = 1

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 489.0
offset_top = 279.0
offset_right = 603.0
offset_bottom = 302.0
text = "Inductancia (L)"

[node name="SliderL" type="HSlider" parent="Panel"]
layout_mode = 0
offset_left = 614.0
offset_top = 284.0
offset_right = 773.0
offset_bottom = 300.0
min_value = 1.0
max_value = 500.0
value = 300.0

[node name="LValue" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 786.0
offset_top = 282.0
offset_right = 827.0
offset_bottom = 305.0

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 492.0
offset_top = 334.0
offset_right = 615.0
offset_bottom = 357.0
text = "Capacitancia (C)"

[node name="SliderC" type="HSlider" parent="Panel"]
layout_mode = 0
offset_left = 624.0
offset_top = 338.0
offset_right = 769.0
offset_bottom = 354.0
min_value = 1.0
max_value = 500.0
value = 50.0
exp_edit = true

[node name="CValue" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 783.0
offset_top = 338.0
offset_right = 827.0
offset_bottom = 361.0

[node name="lblZ0" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 499.0
offset_top = 373.0
offset_right = 799.0
offset_bottom = 396.0
text = "Z₀ = "

[node name="lblTarget" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 660.0
offset_top = 371.0
offset_right = 960.0
offset_bottom = 394.0
text = "Target Z₀: 100.0 Ω"

[node name="btnCheck" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 530.0
offset_top = 409.0
offset_right = 627.0
offset_bottom = 443.0
text = "Comprobar"

[node name="btnCancel" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 666.0
offset_top = 408.0
offset_right = 762.0
offset_bottom = 444.0
text = "Salir"

[node name="ResultLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 536.0
offset_top = 467.0
offset_right = 635.0
offset_bottom = 490.0
text = "Resultado: ..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="SfxPlayer" type="AudioStreamPlayer2D" parent="Panel"]
position = Vector2(-36, 676)
stream = ExtResource("2_c2v5p")
